# icyradio

./: .directory  .gitmodules  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: cli-tool-build.yml  exp-templace-fw-build.yml  kernel-driver-build.yml  pmc-fw-build.yml  soapy-build.yml
docs/: .$block-diagram.xml.bkp  .$pm-block-diagram.xml.bkp  block-diagram.xml  dsp_mcu_intf.txt  dsp_mcu_intf_map.txt  ice40hx8k_ct256.pcf  pm-block-diagram.xml  r820t2_reg_map.txt  smc_mcu_intf_map.txt  smc_mcu_irq_map.txt  top-level-block-diagram.xml  xpress_codec_commands.txt
docs/clk_mngr_design/: clk_mngr_design-Registers.h  clk_mngr_design.slabtimeproj
docs/psram_controller_test/: psram_controller_test
docs/tx_pll_design/: txpll.pll
firmware/: .gitignore  Makefile  axi_i2s_tb_behav.wcfg  axi_irq_controller_tb_behav.wcfg  axi_qspi_mm_tb_behav.wcfg  axi_qspi_tb_behav.wcfg  icyradio.xpr
firmware/a100t/: icyradio.xpr
firmware/src/: bram.v  ci_co_mixer.v  ci_co_tuner.v  cic_decimator.v  cic_interpolator.v  dac_sine_test_lut.memh  ddc.v  dpram.v  fir_coeffs.memh  fir_decimator.v  i2s_master.v  ice40-dev.v  icyradio.pcf  icyradio.v  mixer.v  nco.v  pinout.pcf  qddc.v  qduc.v  qspi_master.v  quadrature_mixer.v  quadrature_tuner.v  ri_co_mixer.v  ri_co_tuner.v  ri_ro_mixer.v  saturator.v  sine_lut.memh  spi_slave.v  synchronizer.v  tuner.v  tuner_mixer.v  tuner_slice.v
firmware/tb/: Makefile
pcb/: .directory  .gitignore  eagle.epf  icyradio.brd  icyradio.sch  icyradio.xlsx
pcb/exp-template/: eagle.epf  icyradio-exp-template.brd  icyradio-exp-template.sch
pcb/lna/: eagle.epf  icyradio-lna.brd  (+1 more)
software/soapy/: CMakeLists.txt  Changelog.txt  README.md
software/soapy/.deb/: control
software/soapy/src/: AD9361.cpp  AXIAD9361.cpp  AXIDMAC.cpp  AXIDNA.cpp  AXIGPIO.cpp  AXII2S.cpp  AXIIIC.cpp  AXIIRQCtrl.cpp  AXIPCIe.cpp  AXIPeripheral.cpp  AXIQuadSPI.cpp  AXIRFTStamp.cpp  AXISPI.cpp  AXIXADC.cpp  AuxMCU.cpp  ExpansionCard.cpp  IDT8V97003.cpp  IcyRadioTool.cpp  LT7182S.cpp  MappedRegion.cpp  PMC.cpp  SPIFlash.cpp  Si5351.cpp  SoapyIcyRadio.cpp  SoapyRegistration.cpp  SoapySettings.cpp  SoapyStreaming.cpp  Utils.cpp
software/soapy/src/include/: AD9361.hpp  AXI.hpp  AXIAD9361.hpp  AXIDMAC.hpp  AXIDNA.hpp  AXIGPIO.hpp  AXII2S.hpp  AXIIIC.hpp  AXIIRQCtrl.hpp  AXIPCIe.hpp  AXIPeripheral.hpp  AXIQuadSPI.hpp  AXIRFTStamp.hpp  AXISPI.hpp  AXIXADC.hpp  AuxMCU.hpp  ExpansionCard.hpp  IDT8V97003.hpp  LT7182S.hpp  MappedRegion.hpp  PMC.hpp  SPIFlash.hpp  Si5351.hpp  SoapyIcyRadio.hpp  Utils.hpp  ioctl.hpp
util/: fir_coef_gen  fir_coef_gen.c  icyradio.rules
(+3781 files in other folders)
